# System-Performance-Monitor-In-C

./: .gitmodules  CMakeLists.txt  README.md  Visualizer.c
CPU/: CPUUtilities.c  CPUUtilities.h
Data/: ProcessingAndStorage.c  ProcessingAndStorage.h
Disk IO/: DiskIO_monitoring.c
Disk_IO/: DiskIO_monitoring.c  DiskIO_monitoring.h
Memory/: Memory.c  Memory.h
Network/: Network.c  NetworkUtilities.h
Process/: Process.c  Process.h
Uptime/: Uptime.c  Uptime.h
User/: CurrentUser.c  CurrentUser.h
raylib/: raygui.c  style_cyber.h
